@@ -1,3 +1,8 @@
+2010-07-25  Matevz Tadel  <matevz.tadel@ijs.si>
+
+	* Stones/HTrans.h:
+	Add HPoint::operator/=(TT) and operator/(HPoint, TT).
+
 2010-07-05  Matevz Tadel  <matevz.tadel@ijs.si>
 
 	* RnrBase/A_Rnr.h:
